# fearless-utils-Android

./: .gitignore  Jenkinsfile  README.md  build.gradle  gradle.properties  maven-publish-helper.gradle  settings.gradle
.github/workflows/: android.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/jp/co/soramitsu/fearless_utils_android/: ComposeStuff.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
fearless-utils/: build.gradle  gradle.properties
fearless-utils/src/main/: AndroidManifest.xml
fearless-utils/src/test/java/jp/co/soramitsu/fearless_utils/: Assertions.kt  MockitoHelpers.kt
fearless-utils/src/test/resources/: default.json  kintsugi_metadata_v14  kintsugi_v14.json  kusama.json  kusama_metadata_v14  polkadot.json  polkadot_metadata_v14  polkadot_v14.json  polkatrain.json  reef.json  reef_metadata  sora2.json  sora2_metadata  sora2_metadata_v14  sora2_v14.json  statemine_metadata  statemine_metadata_v14  statemine_v14.json  westend.json  westend_v14.json
fearless-utils/src/test/resources/crypto/: BIP32HDKDEtalon.json  ecdsaHDKD.json
fearless-utils/src/testShared/java/jp/co/soramitsu/fearless_utils/: Resources.kt  TestData.kt
gradle/wrapper/: gradle-wrapper.properties
iroha2/: build.gradle
iroha2/src/main/java/jp/co/soramitsu/: TypeDefinitionParserImpl.kt
iroha2/src/main/java/jp/co/soramitsu/iroha2/: EntryPoint.kt  TypeDefinitionParserImpl.kt
schema/: build.gradle
sr25519-java/: Cargo.toml
sr25519-java/src/: lib.rs
(+430 files in other folders)
